feat(): support cocoa pods & spm

--- a/.gitIgnore
+++ b/.gitIgnore
@@ -36,5 +36,6 @@ DerivedData/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
-# End of https://www.gitignore.io/api/git,xcode,macos,cocoapods
-*.podspec
+### Swift Package
+/.build
+/Packages
